Reduced container widths to correct overflow on larger screens

--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ body {
 #about_me_viewer {
   position: relative;
   float: left;
-  width: 25vw;
+  width: 24vw;
   height: 550px;
   padding: 0;
   margin: 0;
@@ -114,7 +114,7 @@ body {
 #project_viewer {
   position: relative;
   float: left;
-  width: 75vw;
+  width: 74vw;
   height: 550px;
   padding: 0;
   margin: 0;
